OPTINUM: lectures 18 & 19 nov 2019 finished

--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_2_3_lemmaVonFarkas.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_2_3_lemmaVonFarkas.tex
@@ -61,6 +61,7 @@ Für konvexe Optimierungsaufgaben ist die Lösbarkeit von \eqref{eq: 2.8} sogar 
 Gerade im Hinblick auf die praktische Anwendbarkeit ist \eqref{eq: 2.8} in der jetzigen Form wenig hilfreich, da $\schlange{x}$ und damit $I_0(\schlange{x})$ unbekannt sind. Man betrachtet daher oftmals die folgende äquivalente Umformulierung:
 
 \begin{lemma} %2.8
+	\label{lemma: 2.8}
 	Sei $G \defeq \menge{x \in \Rn \colon \trans{a_i}x \le b_i , i \in I}$ und $\abb{f}{G}{\R}$ stetig differenzierbar. Wenn $x \in \Rn$ Lösung von
 	\begin{equation*}
 		f(x) \to \min \bei x \in  G
