OPTINUM: lectures 25 nov 2019 finished

--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -97,6 +97,7 @@
 \input{optinum_3_2_primalesSimplexverfahren}
 \input{optinum_3_3_dualesSimplexverfahren}
 \input{optinum_3_4_dualitaet}
+\input{optinum_3_5_transportoptimierung}
 
 
 \end{document}
