--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_4_dualitaet.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_4_dualitaet.tex
@@ -11,6 +11,7 @@ Wir betrachten nun die Optimierungsaufgabe
 \end{equation*}
 
 \begin{satz}[Charakterisierungssatz] %3.9
+	\label{satz: 3.9}
 	Ein Punkt $x \in \Rn$ ist genau dann Lösung von (P), wenn ein $\quer{x} \in \Rm$ existiert, sodass insgesamt das folgende System gelöst wird:
 	\begin{equation*}
 		\begin{alignedat}{3}
@@ -61,3 +62,107 @@ Wir betrachten nun die Optimierungsaufgabe
 	\end{equation*}
 	Durch Umstellen der ersten Gleichung nach $v$ lässt sich diese Variable im System ''eliminieren`` und wir erhalten die Behauptung.
 \end{proof}
+
+\begin{definition} %3.3
+	Das Problem
+	\begin{equation}
+		\text{(D)} \qquad z_D = -\trans{b} u \to \max \quad \bei \quad \trans{A} u \ge -c, \enskip u \in \R_+^m 
+		\label{eq: 3.12}
+	\end{equation}
+	heißt duale Optimierungsaufgabe zu (P).
+\end{definition}
+
+\textbf{Begründung:} Die Anwendung von \cref{satz: 3.9} auf (D) ergibt das selbe KKT-System wie im Falle von (P). Dazu müssen wir (D) umformulieren als Minimierungsaufgabe
+\begin{equation*}
+	- z_D = \trans{b} u \to \min \quad \bei \quad -\trans{A} u \le c, \enskip u \in \R_+^m
+\end{equation*}
+(damit die selbe Form wie in \cref{satz: 3.9} vorliegt).
+Einsetzen in (1) - (3) ergibt
+\begin{equation*}
+	\begin{alignedat}{3}
+		\text{(1)} &\leadsto &-\trans{A} u - c &\le 0, \enskip &u &\ge 0 \\
+		\text{(2)} &\leadsto &\transpose{-\trans{A}} y + b &\ge 0, \enskip &y &\ge 0 \\
+		\text{(3)} &\leadsto \quad &\trans{y} \brackets{-\trans{A} u - c} &= 0, \quad &\trans{u} \brackets{\transpose{-\trans{A}} y + b} &= 0
+	\end{alignedat}
+\end{equation*}
+Umformulierung liefert
+\begin{equation*}
+	\begin{alignedat}{4}
+		\text{(1)} &\leadsto &\trans{A} u +  c &\ge 0, \enskip &u &\ge 0 \qquad &&\text{entspricht (2) aus System für (P)} \\
+		\text{(2)} &\leadsto &Ay - b &\le 0, &y &\ge 0 \qquad &&\text{entspricht (1) aus System für (P) mit $y = x$} \\
+		\text{(3)} &\leadsto \quad &\trans{y} \brackets{\trans{A} u + c} &= 0, \quad &\trans{u} \brackets{Ay - b} &= 0 \qquad &&\text{entspricht (3) aus System für (P)}
+	\end{alignedat}
+\end{equation*}
+(D) liefert also dasselbe System (1) - (3) wie (P).
+
+\begin{satz}[schwache Dualität] %3.10
+	Sei $x$ zulässig für (P) und $u$ zulässig für (D). Dann gilt
+	\begin{equation*}
+		-\trans{b} u \le \trans{c} x
+	\end{equation*}
+\end{satz}
+\begin{proof}
+	Es gilt
+	\begin{align*}
+		-\trans{b} u &\le \transpose{-Ax} u = - \trans{x} \trans{A} u \tag{$Ax \le b, u \ge 0$} \\
+		&\le \trans{x} c = \trans{c} x \tag{$\trans{A} u \ge -c, x \ge 0$}
+	\end{align*}
+\end{proof}
+
+\begin{satz}[starke Dualität] %3.11
+	Die Optimierungsaufgabe (P) ist genau dann lösbar, wenn (D) lösbar ist. Für die zugehörigen Lösungen $\quer{x}$ und $\quer{u}$ gilt dann
+	\begin{equation*}
+		- \trans{b} \quer{u} = \trans{c} \quer{x}
+	\end{equation*}
+	also die Gleichheit der Optimalwerte.
+\end{satz}
+\begin{proof}
+	Der erste Teil der Aussage folgt direkt aus der Gleichheit der KKT-Systeme. Aus Eigenschaft (3) des KKT-Systems folgt dann die Gleichheit der Optimalwerte mittels
+	\begin{equation*}
+		\trans{\quer{u}} \brackets{A \quer{x} - b} = 0 = \trans{\quer{x}} \brackets{\trans{A} \quer{u} + c} \follows - \trans{b} \quer{u} = \trans{\quer{u}} A \quer{x} = \trans{c} \quer{x}
+	\end{equation*}
+\end{proof}
+
+Aus dem schwachen Dualitätssatz folgt insbesondere auch, dass die Existenz eines dual (primal) zulässigen Punktes eine endliche untere (obere) Schranke für den primalen (dualen) Optimalwert liefert.
+
+\begin{folgerung} %3.12
+	\begin{equation*}
+		\text{(P) lösbar } \equivalent \text{ (D) lösbar } \equivalent \exists \ x \ge 0, u \ge 0 \colon Ax \le b, \trans{A} u \ge -c
+	\end{equation*}
+\end{folgerung}
+
+Die Bedingungen (3) im KKT-System werden \begriff{Komplementaritätsbedingungen} genannt.
+
+zum Beispiel: $\trans{u} \brackets{Ax - b} = 0, x \ge 0, u \ge 0,  Ax - b \le 0$, d.h. $u_i (Ax - b)_i = 0$ für alle $i$.
+
+Es ist möglich, primale und duale Aufgabe gleichzeitig innerhalb eines Tableaus zu lösen:
+\begin{equation*}
+	\begin{alignedat}{4}
+		(P) \quad &z_P &=   \trans{c} x \to \min \quad  &\bei \quad          A x &\le b, &x &\ge 0 \\
+		(D) \quad &z_D &= - \trans{b} u \to \max \quad &\bei \quad - \trans{A} u &\le c, &u &\ge 0
+	\end{alignedat}
+\end{equation*}
+Durch Einführen von Schlupfvariablen $s \ge 0$, $v \ge0$ erhält man
+\begin{equation*}
+	\begin{alignedat}{5}
+		(P) \quad &   z_P &= \trans{c} x \to \min \quad &\bei \quad &s &= b - Ax, &x &\ge 0, &s &\ge 0 \\
+		(D) \quad & - z_D &= \trans{b} u \to \min \quad &\bei \quad &v &= c + \trans{A} u, &u &\ge 0, &v &\ge 0
+	\end{alignedat}
+\end{equation*}
+
+\begin{center}
+	\begin{tabular}{r|c|c}
+		$T_0$ & $x$ & $1$ \\ \hline
+		$s = $ & $-A$ & $b$ \\ \hline
+		$z_P =$ & $\trans{c}$ & $0$
+	\end{tabular}
+    $\quad$ bzw. $\quad$
+	\begin{tabular}{r|c|c}
+		$T_0$ & $u$ & $1$ \\ \hline
+		$v = $ & $\trans{A}$ & $c$ \\ \hline
+		$- z_D =$ & $\trans{b}$ & $0$
+	\end{tabular}
+\end{center}
+
+Beide Schemata sind (gewissermaßen) zueinander transponiert.
+Das duale Simplexverfahren für (P) kann als primales Simplexverfahrens für (D) interpretiert werden.
