STOCHV: lectures until 06 dec 2019

--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -96,4 +96,12 @@
 \input{stochv_2_2_replikationCRR}
 \input{stochv_2_3_martingalmassArbitrageCRR}
 
+\chapter{Das Black-Scholes-Modell}
+\label{chapter_3_blackScholes}
+\input{stochv_3_0_einfuehrung}
+
+\chapter{Optimale Investition}
+\label{chapter_4_optimaleInvesition}
+\input{stochv_4_1_anlageproblem}
+\input{stochv_4_2_exkursOptimierung}
 \end{document}
