--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_theorem.sty
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_theorem.sty
@@ -300,6 +300,17 @@
 \theoremseparator{}
 \theoremindent0cm
 
+\newtheorem{*lemma}{Lemma}
+\newtheorem{*wiederholung}{Wiederholung}
+\newtheorem{*erinnerung}{Erinnerung}
+\newtheorem{*bemerkung}{Bemerkung}
+
+\newtheorem{*beispiel}{Beispiel}
+
+\theoremstyle{nonumberplain}
+\theoremheaderfont{\osfamily \bfseries}
+\theorembodyfont{}
+\theoremseparator{.}
 \newmdtheoremenv[%
 	%style=boxedtheorem,%
 	backgroundcolor=cdorange!10,%
@@ -323,12 +334,6 @@
 	skipbelow=6pt,%
 	nobreak,%
 ]{*definition}{Definition}
-\newtheorem{*lemma}{Lemma}
-\newtheorem{*wiederholung}{Wiederholung}
-\newtheorem{*erinnerung}{Erinnerung}
-\newtheorem{*bemerkung}{Bemerkung}
-
-\newtheorem{*beispiel}{Beispiel}
 
 \theoremstyle{nonumberplain}
 \theoremheaderfont{\osfamily \bfseries \upshape}
