OPTINUM: lecture until 17 dec 2019 finished

--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
@@ -25,6 +25,7 @@ Als Modell können wir somit formulieren:
 Aufgrund der binären Gestalt der Variablen wird das Problem auch als $0/1$-Rucksackproblem bezeichnet. Im Gegensatz dazu ist beim klassischen Rucksackproblem jedes Teil mehrfach nutzbar. In diesem Fall ist $x_i \in \Z_+$ zu fordern.
 
 \subsection{Das Bin-Packing-Problem}
+\label{subsec: 1.3.2}
 
 Gegeben seien (sehr große) Anzahl an Behältern der Kapazität $L$ sowie $b_i$ Teile des Gewichts oder Volumens $\ell_i$ mit $i \in I = \menge{1, \dots , m}$. Man ermittle die minimale Anzahl an Behältern, die benötigt wird, um alle Objekte zu verstauen.
 Jede Packung (eines Behälters) kann als Vektor $a = (a_1 , \dots , a_m) \in \Z_+^m$ geschrieben werden, wobei $a_i$ angibt, wie oft das Teil $i$ benutzt wird. Ein solcher Vektor ist eine zulässige Packung, wenn 
