--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_4_1_spaltengenerierung.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_4_1_spaltengenerierung.tex
@@ -1,6 +1,6 @@
 \section{Spaltengenerierung}
 
-Wir betrachten die stetige Relaxation des Bin-Packing-Problems (vgl. \cref{chapter_1_einfuehrung}). Zur Erinnerung: Es sind $b_i$ Teile der Länge $\ell_i$ ($i = 1, \dots, m$) in möglichst wenige Behälter der Kapazität $L$ zu packen. 
+Wir betrachten die stetige Relaxation des Bin-Packing-Problems (vgl. \cref{subsec: 1.3.2}). Zur Erinnerung: Es sind $b_i$ Teile der Länge $\ell_i$ ($i = 1, \dots, m$) in möglichst wenige Behälter der Kapazität $L$ zu packen. 
 \begin{itemize}[nolistsep, topsep=-\parskip]
 	\item Packungsvarianten: $a^j = \transpose{a_1^j , \dots , a_m^j} \in \Z_+^m$ mit $\trans{\ell}a^j \le L$ ($j \in J$)
 	\item Variablen: $x_j$ beschreibt Häufigkeit, wie oft Variante $a^j$ genutzt wird.
