--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_headings.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_local_headings.tex
@@ -37,7 +37,7 @@
 \titleformat*{\section}{\bfseries\titlefont\sectionsize}%{\thesection}{8pt}{}%
 \titlespacing{\section}{0pt}{10pt}{5pt}
 \titleformat*{\subsection}{\bfseries\titlefont\sectionsize\smaller}
-
+\titleformat*{\subsubsection}{\bfseries\titlefont\sectionsize\smaller\smaller}
 %%%%%%%%% section.
 %\renewcommand{\thechapter}{\Roman{chapter}}
 %\titlelabel{\thetitle.\quad} % "." behind section/sub... (3. instead of 3)
